# PickyBPE

./: .gitignore  README.md  pyproject.toml
.github/workflows/: git-tag_to_pypi.yml
scripts/: segment.py  train.py
src/pickybpe/: segmentation.py  utils.py  vocabularisation.py
src/pickybpe/util/: counters.py  domain.py
