[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pickybpe_bauwenst"
version = "v1.3.1"
requires-python = ">= 3.9"
authors = [
    {name = "Pavel Chizhov", email = "pavel.chizhov@thws.de"},
    {name = "Thomas Bauwens", email = "thomas.bauwens@kuleuven.be"},
]
maintainers = [
    {name = "Thomas Bauwens", email = "thomas.bauwens@kuleuven.be"}
]
description = "BPE modification that removes sparsely used intermediate tokens during vocabularisation."
readme = "README.md"
keywords = ["NLP", "tokenizers", "tokenization", "subwords", "segmentation", "natural language", "pickybpe"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research"
]
dependencies = [
    "numpy",
    "heapdict"
]

[project.urls]
Source = "https://github.com/bauwenst/PickyBPE"
Issues = "https://github.com/bauwenst/PickyBPE/issues"
